%% Mermaid Diagram for the tagcore rust library

classDiagram
direction LR
    note for Workspace "Must exist for tags to be used.<br>Corresponds to <br>.tagwksp_{name} file"
    class Workspace {
	    + directory_root : PathBuf
	    + name : String
	    + all_tagfiles : HashMap~PathBuf, TagFile~
	    + tag_cache : HashSet~Strings~
	    + open_workspace(self, path: PathBuf, name: String) Result~Workspace~
	    + create_workspace(self, path: PathBuf, name: String) Result~Workspace~
	    + scan_for_tagfiles(self)
	    + add_tag_to_file(self, file_name: PathBuf, tag: String) Result
	    + remove_tag_from_file(self, file_name: PathBuf, tag: String) Result
	    + get_tags_for_file_name(path_to_file: PathBuf) Vec~Tag~
	    + get_name(self) String
        + get_path_to_workspace_file(self) Pathbuf
	    + get_tag_cache(self) HashSet~String~
	    + query_exact(self, text: String, simple: bool, key: bool, value: bool) Map~String, Vec of Tags~
	    + query_fuzzy(self, text: String, simple: bool, key: bool, value: bool) Map~String, Vec of Tags~
    }

    note for TagFile "In-Memory Model.<br>Corresponds to .tag_{name} file<br>in each subdir."
    class TagFile {
	    - full_path_to_tagfile : PathBuf
	    - mapping: HashMap~String, Vec of Tag~
	    + from_file_in_dir(path: Path) Result~TagFile~
	    + empty(path: Path) Result~TagFile~
	    + get_mapping_ref(self) HashMap~Stirng, Vec of Tag~
	    + add_tag_to_file_in_self(self) Result
	    + remove_tag_from_file_in_self(self) Result
	    + get_all_tags_for_filename(self, file_name: String) Vec~Tag~
	    + get_all_tags_string(self) HashSet~String~
	    - save_to_disk(self) Result
	    - load_tagfile_from_disk(full_path_to_tf) Result~TagFile~
    }

	note for Tag "Union Type"
    class Tag {
    }

    class Simple {
	    value: String
    }

    class KV {
	    key: String
	    value: String
    }

    Simple --|> Tag
    KV --|> Tag
    TagFile --* Workspace
    Tag --* TagFile